--- a/src/views/canvasView.fxml
+++ b/src/views/canvasView.fxml
@@ -160,6 +160,16 @@
                      <VBox.margin>
                         <Insets bottom="4.0" top="4.0" />
                      </VBox.margin></Button>
+
+                    <Button  fx:id="loadFromDbButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#loadShapesFromDb" prefHeight="32.0" prefWidth="32.0" styleClass="canvasToolBarButton">
+                       <tooltip>
+                           <Tooltip text="Load shapes from DB" />
+                       </tooltip>
+                       <VBox.margin>
+                           <Insets bottom="4.0" top="12.0" />
+                       </VBox.margin>
+                    </Button>
+
                </children>
                <BorderPane.margin>
                   <Insets />
