add gui styling to loginView

--- a/src/views/loginView.fxml
+++ b/src/views/loginView.fxml
@@ -1,33 +1,158 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
+<?import javafx.scene.text.*?>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
+
+<!--<?import javafx.scene.control.ButtonBar?>-->
+
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="372.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LoginController">
+<AnchorPane prefHeight="400.0" prefWidth="1060.0" style="-fx-background-color: #36393f;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LoginController">
     <children>
-        <ButtonBar prefHeight="40.0" prefWidth="200.0" />
-        <Label layoutX="45.0" layoutY="49.0" text="Host IP" />
-        <TextField fx:id="ipField" layoutX="125.0" layoutY="45.0" promptText="ip address" text="gort.fit.vutbr.cz" />
-        <Label layoutX="45.0" layoutY="84.0" text="Port" />
-        <TextField fx:id="portField" layoutX="125.0" layoutY="80.0" text="1521" />
-        <Label layoutX="45.0" layoutY="117.0" text="Service tag" />
-        <TextField fx:id="tagField" layoutX="125.0" layoutY="113.0" text="orclpdb" />
-        <Label layoutX="45.0" layoutY="150.0" text="User" />
-        <TextField fx:id="userField" layoutX="125.0" layoutY="146.0" promptText="login" text="xmarko15"/>
-        <Label layoutX="45.0" layoutY="184.0" text="Password" />
-        <PasswordField fx:id="pwdField" layoutX="125.0" layoutY="180.0" promptText="password" text="tKZNZeuo"/>
-        <Button fx:id="connectBtn" layoutX="125.0" layoutY="217.0" mnemonicParsing="false" text="Connect" onAction="#connectToDb" />
-
-        <Separator layoutX="-14.0" layoutY="259.0" prefHeight="0.0" prefWidth="355.0" />
-
-        <Label layoutX="45.0" layoutY="272.0" text="SQL init" />
-        <TextField fx:id="pathField" layoutX="125.0" layoutY="268.0" promptText="Path to SQL init script" />
-        <Button fx:id="insertBtn" layoutX="125.0" layoutY="306.0" mnemonicParsing="false" text="Insert" onAction="#commitFile" />
-        <Button fx:id="selectBtn" layoutX="274.0" layoutY="268.0" mnemonicParsing="false" text="Search" onAction="#openChooser" />
+      <HBox alignment="CENTER" prefHeight="650.0" prefWidth="1060.0">
+         <children>
+            <GridPane alignment="CENTER" maxWidth="400.0" prefWidth="400.0" AnchorPane.leftAnchor="0.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="200.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="200.0" />
+              </columnConstraints>
+              <rowConstraints>
+                  <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="50.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="50.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="50.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="50.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="50.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="50.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="50.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="50.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="50.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="50.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="50.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+            <!--        <ButtonBar prefHeight="40.0" prefWidth="200.0" />-->
+                    <Label alignment="CENTER_RIGHT" maxWidth="-Infinity" prefWidth="200.0" text="Host IP" textFill="WHITE" GridPane.rowIndex="1">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets bottom="10.0" right="10.0" top="10.0" />
+                     </GridPane.margin>
+                  </Label>
+                    <TextField fx:id="ipField" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="30.0" promptText="ip address" text="gort.fit.vutbr.cz" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </GridPane.margin>
+                  </TextField>
+                    <TextField fx:id="tagField" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="30.0" text="orclpdb" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                     <GridPane.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </GridPane.margin>
+                  </TextField>
+                    <TextField fx:id="portField" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="30.0" text="1521" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                     <GridPane.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </GridPane.margin>
+                  </TextField>
+                    <TextField fx:id="userField" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="30.0" promptText="login" text="xmarko15" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                     <GridPane.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </GridPane.margin>
+                  </TextField>
+                    <PasswordField fx:id="pwdField" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="30.0" promptText="password" text="tKZNZeuo" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                     <GridPane.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </GridPane.margin>
+                  </PasswordField>
+                    <Button fx:id="connectBtn" alignment="CENTER" mnemonicParsing="false" onAction="#connectToDb" prefHeight="28.0" prefWidth="250.0" text="Connect" textFill="#4d4d4d" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="6">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets top="25.0" />
+                     </GridPane.margin>
+                  </Button>
+                    <Label alignment="CENTER_RIGHT" maxWidth="-Infinity" prefWidth="200.0" text="User" textFill="WHITE" GridPane.rowIndex="4">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets bottom="10.0" right="10.0" top="10.0" />
+                     </GridPane.margin>
+                  </Label>
+                    <Label alignment="CENTER_RIGHT" maxWidth="-Infinity" prefWidth="200.0" text="Port" textFill="WHITE" GridPane.rowIndex="3">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets bottom="10.0" right="10.0" top="10.0" />
+                     </GridPane.margin>
+                  </Label>
+                    <Label alignment="CENTER_RIGHT" maxWidth="-Infinity" prefWidth="200.0" text="Service tag" textFill="WHITE" GridPane.rowIndex="2">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets bottom="10.0" right="10.0" top="10.0" />
+                     </GridPane.margin>
+                  </Label>
+                    <Label alignment="CENTER_RIGHT" maxWidth="-Infinity" prefWidth="200.0" text="Password" textFill="WHITE" GridPane.rowIndex="5">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets bottom="10.0" right="10.0" top="10.0" />
+                     </GridPane.margin>
+                  </Label>
+            
+                                <Separator prefHeight="0.0" prefWidth="355.0" GridPane.columnSpan="2" GridPane.rowIndex="7" />
+            
+                    <Label alignment="CENTER" maxWidth="-Infinity" prefHeight="18.0" prefWidth="362.0" text="SQL init" textAlignment="CENTER" textFill="WHITE" GridPane.columnSpan="2" GridPane.rowIndex="8">
+                     <font>
+                        <Font name="System Bold" size="24.0" />
+                     </font>
+                  </Label>
+                    <TextField fx:id="pathField" promptText="Path to SQL init script" GridPane.rowIndex="9">
+                     <GridPane.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </GridPane.margin>
+                  </TextField>
+                    <Button fx:id="selectBtn" mnemonicParsing="false" onAction="#openChooser" text="Open file" textFill="#4d4d4d" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="9">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </GridPane.margin>
+                  </Button>
+                    <Button fx:id="insertBtn" mnemonicParsing="false" onAction="#commitFile" prefHeight="28.0" prefWidth="350.0" text="Setup DB with this file" textFill="#4d4d4d" GridPane.columnSpan="2" GridPane.rowIndex="10">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <Label alignment="CENTER" layoutX="30.0" layoutY="421.0" maxWidth="-Infinity" prefHeight="18.0" prefWidth="362.0" text="Setup DB connection" textAlignment="CENTER" textFill="WHITE" GridPane.columnSpan="2">
+                     <font>
+                        <Font name="System Bold" size="24.0" />
+                     </font>
+                  </Label>
+               </children>
+               <padding>
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+               </padding>
+            </GridPane>
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
