--- a/src/views/shapeEdit.fxml
+++ b/src/views/shapeEdit.fxml
@@ -55,6 +55,12 @@
                            <Insets bottom="5.0" left="5.0" right="5.0" top="10.0" />
                        </GridPane.margin>
                    </Button>
+
+                   <Button mnemonicParsing="false" onAction="#deleteButtonClicked" prefHeight="27.0" prefWidth="223.0" text="Delete" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="4">
+                       <GridPane.margin>
+                           <Insets bottom="5.0" left="5.0" right="5.0" top="10.0" />
+                       </GridPane.margin>
+                   </Button>
                </children>
                <columnConstraints>
                    <ColumnConstraints maxWidth="108.0" minWidth="67.0" prefWidth="79.0" />
