--- a/src/views/offersView.fxml
+++ b/src/views/offersView.fxml
@@ -23,8 +23,22 @@
          <top>
             <ToolBar maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="1060.0" style="-fx-background-color: #36393f;" BorderPane.alignment="TOP_LEFT">
                <items>
-                  <Button mnemonicParsing="false" onAction="#createOffer" text="New offer" />
-                  <Button mnemonicParsing="false" onAction="#myOffers" text="My offers" />
+
+                  <Button fx:id="newOfferButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#createOffer" prefHeight="32.0" prefWidth="32.0" styleClass="canvasToolBarButton">
+                     <tooltip>
+                        <Tooltip text="Create new offer" />
+                     </tooltip>
+                     <VBox.margin>
+                        <Insets bottom="4.0" top="4.0" left="4.0" right="4.0" />
+                     </VBox.margin></Button>
+
+                  <Button fx:id="myOffersButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#myOffers" prefHeight="32.0" prefWidth="32.0" styleClass="canvasToolBarButton">
+                     <tooltip>
+                        <Tooltip text="My offers" />
+                     </tooltip>
+                     <VBox.margin>
+                        <Insets bottom="4.0" top="4.0" left="4.0" right="4.0" />
+                     </VBox.margin></Button>
                </items>
             </ToolBar>
          </top>
