--- a/src/views/shapeEdit.fxml
+++ b/src/views/shapeEdit.fxml
@@ -5,6 +5,8 @@
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.collections.FXCollections?>
+<?import model.CanvasEntityType?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="560.0" prefWidth="300.0" AnchorPane.topAnchor="10" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ShapeEditController">
    <children>
@@ -39,18 +41,39 @@
                        </GridPane.margin>
                    </TextField>
 
-                   <Label alignment="CENTER_RIGHT" prefHeight="18.0" prefWidth="75.0" text="Color" textAlignment="RIGHT" textFill="#e1e1e1" GridPane.columnIndex="0" GridPane.rowIndex="2">
+                   <Label alignment="CENTER_RIGHT" prefHeight="18.0" prefWidth="75.0" text="Type" textAlignment="RIGHT" textFill="#e1e1e1" GridPane.columnIndex="0" GridPane.rowIndex="2">
+                   <font>
+                           <Font size="14.0" />
+                       </font>
+                   </Label>
+                   <ComboBox fx:id="entityType" prefHeight="27.0" prefWidth="146" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                       <items>
+                           <FXCollections fx:factory="observableArrayList">
+                               <CanvasEntityType fx:value="LAKE"/>
+                               <CanvasEntityType fx:value="TREE"/>
+                               <CanvasEntityType fx:value="STREET"/>
+                               <CanvasEntityType fx:value="BUSSTOP"/>
+                               <CanvasEntityType fx:value="BUILDING"/>
+                               <CanvasEntityType fx:value="OTHER"/>
+                           </FXCollections>
+                       </items>
+                       <GridPane.margin>
+                           <Insets bottom="5.0" left="5.0" top="5.0" />
+                       </GridPane.margin>
+                   </ComboBox>
+
+                   <Label alignment="CENTER_RIGHT" prefHeight="18.0" prefWidth="75.0" text="Color" textAlignment="RIGHT" textFill="#e1e1e1" GridPane.columnIndex="0" GridPane.rowIndex="3">
                        <font>
                            <Font name="System Bold" size="14.0" />
                        </font>
                    </Label>
-                   <ColorPicker fx:id="colorPicker" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" prefWidth="144.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                   <ColorPicker fx:id="colorPicker" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" prefWidth="144.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
                        <GridPane.margin>
                            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                        </GridPane.margin>
                    </ColorPicker>
 
-                   <Button fx:id="okButton" mnemonicParsing="false" onAction="#okButtonClicked" prefHeight="27.0" prefWidth="223.0" text="OK" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="3">
+                   <Button fx:id="okButton" mnemonicParsing="false" onAction="#okButtonClicked" prefHeight="27.0" prefWidth="223.0" text="OK" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="4">
                        <GridPane.margin>
                            <Insets bottom="5.0" left="5.0" right="5.0" top="10.0" />
                        </GridPane.margin>
