--- a/src/views/searchView.fxml
+++ b/src/views/searchView.fxml
@@ -144,35 +144,19 @@
                                      </GridPane.margin>
                                  </TextField>
 
-                                  <Label alignment="CENTER_RIGHT" layoutX="25.0" layoutY="94.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="18.0" prefWidth="100.0" text="Close to center" textAlignment="RIGHT" textFill="#f5f5f5" GridPane.columnIndex="0" GridPane.rowIndex="4" GridPane.valignment="CENTER">
+                                  <Label alignment="CENTER_RIGHT" layoutX="25.0" layoutY="94.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="18.0" prefWidth="100.0" text="Distance to center" textAlignment="RIGHT" textFill="#f5f5f5" GridPane.columnIndex="0" GridPane.rowIndex="4" GridPane.valignment="CENTER">
                                      <font>
                                         <Font name="System Bold" size="14.0" />
                                      </font>
                                   </Label>
-                                  <CheckBox fx:id="closeToCenter" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="4">
-                                     <padding>
-                                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                     </padding>
-                                 <GridPane.margin>
-                                    <Insets bottom="5.0" left="10.0" top="5.0" />
-                                 </GridPane.margin>
-                                  </CheckBox>
 
-                                  <Label alignment="CENTER_RIGHT" layoutX="25.0" layoutY="166.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="18.0" prefWidth="100.0" text="Close to lake" textAlignment="RIGHT" textFill="#f5f5f5" GridPane.rowIndex="5" GridPane.valignment="CENTER">
+                                  <Label alignment="CENTER_RIGHT" layoutX="25.0" layoutY="166.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="18.0" prefWidth="100.0" text="Distance to lake" textAlignment="RIGHT" textFill="#f5f5f5" GridPane.rowIndex="5" GridPane.valignment="CENTER">
                                      <font>
                                         <Font name="System Bold" size="14.0" />
                                      </font>
                                   </Label>
-                                  <CheckBox fx:id="closeToLake" layoutX="125.0" layoutY="156.0" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="5">
-                                     <padding>
-                                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                     </padding>
-                                 <GridPane.margin>
-                                    <Insets bottom="5.0" left="10.0" top="5.0" />
-                                 </GridPane.margin>
-                                  </CheckBox>
 
-                                 <Button fx:id="searchButton" alignment="CENTER" mnemonicParsing="false" onAction="#searchSubmit" prefHeight="28.0" prefWidth="300.0" style="-fx-background-color: #43b480; -fx-cursor: hand;" text="SEARCH" textFill="WHITE" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="10">
+                                 <Button fx:id="searchButton" alignment="CENTER" mnemonicParsing="false" onAction="#searchSubmit" prefHeight="28.0" prefWidth="300.0" style="-fx-background-color: #43b480; -fx-cursor: hand;" text="SEARCH" textFill="WHITE" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="11">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
@@ -180,6 +164,36 @@
                                     <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                                  </GridPane.margin>
                                  </Button>
+                              <ChoiceBox  fx:id="centerDistance" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                                  <items>
+                                      <FXCollections fx:factory="observableArrayList">
+                                          <String fx:value="any" />
+                                          <String fx:value="50" />
+                                          <String fx:value="100" />
+                                          <String fx:value="150" />
+                                          <String fx:value="200" />
+                                          <String fx:value="250" />
+                                      </FXCollections>
+                                  </items>
+                                 <GridPane.margin>
+                                    <Insets bottom="5.0" left="15.0" top="5.0" />
+                                 </GridPane.margin>
+                              </ChoiceBox>
+                              <ChoiceBox fx:id="lakeDistance"  prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                                  <items>
+                                      <FXCollections fx:factory="observableArrayList">
+                                          <String fx:value="any" />
+                                          <String fx:value="50" />
+                                          <String fx:value="100" />
+                                          <String fx:value="150" />
+                                          <String fx:value="200" />
+                                          <String fx:value="250" />
+                                      </FXCollections>
+                                  </items>
+                                 <GridPane.margin>
+                                    <Insets bottom="5.0" left="15.0" top="5.0" />
+                                 </GridPane.margin>
+                              </ChoiceBox>
 
                              </children>
                              <columnConstraints>
@@ -191,6 +205,7 @@
                                  <RowConstraints />
                                  <RowConstraints />
                                  <RowConstraints />
+                              <RowConstraints />
                               <RowConstraints />
                               <RowConstraints />
                               <RowConstraints />
@@ -249,8 +264,10 @@
                            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                        </padding>
                    </HBox>
-                   <ScrollPane style="-fx-background-color: #2f3136;" fitToHeight="true" vmin="0" vmax="0" fitToWidth="true" vbarPolicy="NEVER" maxHeight="150.0" maxWidth="1060" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefViewportHeight="150.0" prefViewportWidth="1060.0" prefWidth="1060.0">
-                       <HBox fx:id="results" style="-fx-background-color: #2f3136;" maxHeight="150" fillHeight="false" maxWidth="10000" prefHeight="150.0" prefWidth="10000.0" styleClass="searchResults" />
+                   <ScrollPane fitToHeight="true" fitToWidth="true" maxHeight="150.0" maxWidth="1060" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefViewportHeight="150.0" prefViewportWidth="1060.0" prefWidth="1060.0" style="-fx-background-color: #2f3136;" vbarPolicy="NEVER" vmax="0" vmin="0">
+                      <content>
+                          <HBox fx:id="results" fillHeight="false" maxHeight="150" maxWidth="10000" prefHeight="150.0" prefWidth="10000.0" style="-fx-background-color: #2f3136;" styleClass="searchResults" />
+                      </content>
                    </ScrollPane>
                </children>
             </VBox>
